Artifactory/Nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
spec:
  type: NodePort
  selector:
    app: nexus
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30100
  - port: 8082
    targetPort: 8082
    nodePort: 30101
